--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -147,4 +147,103 @@ a {
   color: black;
   text-decoration: none;
 }
+
+.signup {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.25);
+  display: none;
+  place-items: center;
+}
+
+.signup form {
+  width: 50rem;
+  background-color: white;
+  -webkit-box-shadow: 9.39709px 25.3119px 63px rgba(0, 0, 0, 0.01);
+          box-shadow: 9.39709px 25.3119px 63px rgba(0, 0, 0, 0.01);
+  border-radius: 2rem;
+  padding: 3.9rem 5.8rem;
+}
+
+.signup form h3 {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 3rem;
+  line-height: 39px;
+  text-align: center;
+  -webkit-font-feature-settings: 'salt' on, 'liga' off;
+          font-feature-settings: 'salt' on, 'liga' off;
+  padding-bottom: 5rem;
+}
+
+.signup form p {
+  position: relative;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.8rem;
+  letter-spacing: -0.02em;
+  color: #000000;
+}
+
+.signup form input[type=email], .signup form input[type=password], .signup form input[type=submit] {
+  width: 100%;
+  margin-bottom: 4rem;
+  padding: 1rem 1rem 1rem 5rem;
+  outline: none;
+  border: 2px solid #E2E2E2;
+  border-radius: 8px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 110%;
+  letter-spacing: -0.02em;
+  color: #A0A0A0;
+}
+
+.signup form input[type=submit] {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.8rem;
+  letter-spacing: -0.02em;
+  padding: 1.2rem 0rem;
+  color: #FFFFFF;
+  cursor: pointer;
+}
+
+.signup form input[type=checkbox] {
+  border: 2px solid #E2E2E2;
+  margin-right: .9rem;
+}
+
+.signup form #email::before {
+  content: "";
+  position: absolute;
+  top: 2.7rem;
+  left: .7rem;
+  width: 3rem;
+  height: 3rem;
+  background: url("../assets/mail.svg") center center no-repeat;
+  background-size: contain;
+  z-index: 100;
+}
+
+.signup form #password::before {
+  content: "";
+  position: absolute;
+  top: 2.7rem;
+  left: .7rem;
+  width: 3rem;
+  height: 3rem;
+  background: url("../assets/password.svg") center center no-repeat;
+  background-size: contain;
+  z-index: 100;
+}
 /*# sourceMappingURL=stylesheet.css.map */
